ch97/vllm-sr/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  
  - name: http-8899
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8899
    perConnectionBufferLimitBytes: 524288000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              
              # Route for model: qwen3
              - match:
                  prefix: "/"
                  headers:
                  - name: x-selected-model
                    string_match:
                      exact: "qwen3"
                route:
                  cluster: qwen3_cluster
                  timeout: 300s
                  idleTimeout: 1200s
                  # Rewrite Host header to match upstream server
                  host_rewrite_literal: "192.168.1.114"
                  
              
              
              # Default route (no x-selected-model header)
              - match:
                  prefix: "/"
                route:
                  
                  # Route to first model by default
                  cluster: qwen3_cluster
                  
                  timeout: 300s
                  
                  # Rewrite Host header to match upstream server
                  host_rewrite_literal: "192.168.1.114"
                  
                  
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              allow_mode_override: true
              grpc_service:
                envoy_grpc:
                  cluster_name: extproc_service
                timeout: 1200s
              processing_mode:
                request_header_mode: "SEND"
                response_header_mode: "SEND"
                request_body_mode: "BUFFERED"
                response_body_mode: "BUFFERED"
              message_timeout: 300s
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy_access.log
              format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
  

  clusters:
  # ExtProc service (semantic router)
  - name: extproc_service
    connect_timeout: 1200s
    type: LOGICAL_DNS
    
    dns_lookup_family: V4_ONLY
    
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: extproc_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: vllm-sr-router-container
                port_value: 50051
            
            hostname: "vllm-sr-router-container"
            

  

  
  # Cluster for model: qwen3
  - name: qwen3_cluster
    connect_timeout: 1200s
    type: STATIC
    
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: qwen3_cluster
      endpoints:
      - lb_endpoints:
        
        - endpoint:
            address:
              socket_address:
                address: 192.168.1.114
                port_value: 4000
            
          load_balancing_weight: 1
        
    
  

  

# Runtime configuration
layered_runtime:
  layers:
  - name: static_layer
    static_layer:
      overload:
        global_downstream_max_connections: 50000
